# dwg-mcp-server

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  docker-publish.yml
crates/dwg-libredwg/: Cargo.toml
crates/dwg-libredwg/src/: lib.rs  schema.rs
crates/dwg-libredwg/tests/: libredwg_document.rs
crates/dwg-worker/: Cargo.toml
crates/dwg-worker-core/: Cargo.toml
crates/dwg-worker-core/src/: backend.rs  lib.rs  model.rs  protocol.rs  stdio_handler.rs
crates/dwg-worker-core/tests/: worker_server.rs
crates/dwg-worker/src/: main.rs
crates/dwg-worker/tests/: open_file_fixtures.rs
crates/libredwg-sys/: Cargo.toml  bridge.c  bridge.h  build.rs  wrapper.h
docker/: Dockerfile
npm/: package.json
npm/scripts/: run-docker-mcp-server.sh
scripts/: build-docker-mcp-server.sh  build-libredwg.sh  clean-build-artifacts.sh  export-libredwg-json.sh  run-docker-mcp-server.sh  run-e2e-tests.sh
server/: pyproject.toml
server/src/dwg_mcp_server/: __init__.py  __main__.py  app.py  file_access.py  worker_client.py
server/tests/: __init__.py  mcp_test_client.py  test_docker_smoke.py  test_file_access.py  test_host.py  test_mcp_stdio.py
testData/: dyn-blocks.dwg
