[workspace]
members = [
    "crates/dwg-libredwg",
    "crates/dwg-worker",
    "crates/dwg-worker-core",
]
exclude = ["crates/libredwg-sys"]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
